# ptrace-examples

./: .gitignore  CMakeLists.txt  README.md  build.gradle.kts  fork-exec.cpp  inject.cpp  memory-write.cpp  pmparser.c  pmparser.h  remote-call.cpp  seize-fork-exec.cpp  settings.gradle.kts  sleeper.cpp  trace-exec.cpp  trace-fork-exec.cpp  trace-repl.cpp  trace-sig.cpp  trace-syscall.cpp  utils.h
app/: .gitignore  build.gradle.kts
app/scripts/: push.bat
app/src/main/cpp/: CMakeLists.txt  elf_util.cpp  inject-lib.cpp  inject.cpp  pmparser.c  ptrace_utils.cpp  trace.cpp
app/src/main/cpp/include/: elf_util.h  logging.h  pmparser.h  ptrace_utils.h  trace.h
app/src/main/cpp/shellcode/: armeabi-v7a.s  breakpoint.c
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
